# services/api/src/modules/countries/countries.controller.ts
@@ -1,7 +1,7 @@
 import { Controller, Get, Path, Route, Tags } from 'tsoa';
 import { CountriesService } from './countries.service';
 import { Country } from '@prisma/client';
-import { CountryGoogleTrends } from './countries.types';
+import { CountryGoogleTrends, CountryPassports } from './countries.types';
 
 @Route('/countries')
 @Tags('Countries')
@@ -18,13 +18,23 @@ export class CountriesController extends Controller {
     return this.countriesService.getCountries();
   }
 
+  @Get('google/trends')
+  async getTrends(): Promise<Pick<Country, CountryGoogleTrends>[]> {
+    return this.countriesService.getGoogleTrends();
+  }
+
+  @Get('passports')
+  async getPassports(): Promise<Pick<Country, CountryPassports>[]> {
+    return this.countriesService.getPassports();
+  }
+
   @Get(':code')
   async getCountry(@Path('code') code: string): Promise<Country> {
     return this.countriesService.getCountry(code);
   }
 
-  @Get('google/trends')
-  async getTrends(): Promise<Pick<Country, CountryGoogleTrends>[]> {
-    return this.countriesService.getGoogleTrends();
+  @Get(':code/passports')
+  async getPassport(@Path('code') code: string): Promise<Pick<Country, CountryPassports | 'passportRequirements'>> {
+    return this.countriesService.getPassport(code);
   }
 }
